--- a/apps/block_scout_web/priv/static/css/non-critical.css
+++ b/apps/block_scout_web/priv/static/css/non-critical.css
@@ -290,6 +290,13 @@
     fill: #fff; }
   .i-tooltip:hover .i-tooltip-circle {
     fill: #5c34a2; }
+  .i-tooltip.ds-inline {
+    display: inline; }
+
+.i-tooltip-2 {
+  color: #a3a9b5; }
+  .i-tooltip-2:hover {
+    color: #5c34a2; }
 
 .check-tooltip {
   display: block;
