clean up footer

--- a/apps/block_scout_web/assets/css/components/_dashboard-banner.scss
+++ b/apps/block_scout_web/assets/css/components/_dashboard-banner.scss
@@ -173,7 +173,7 @@ $dashboard-banner-chart-axis-font-color-alt: #333;
   display: flex;
   height: $dashboard-banner-network-plain-container-height;
   justify-content: center;
-  margin: 0 0 -15px 30px;
+  margin: 15px 0 -15px 30px;
   max-width: 100%;
   width: 750px;
   position: relative;
