--- a/apps/block_scout_web/assets/css/components/_footer.scss
+++ b/apps/block_scout_web/assets/css/components/_footer.scss
@@ -13,7 +13,7 @@ $footer-logo-width: auto !default;
   font-size: 12px;
   line-height: 1.67;
   margin: 0;
-  padding: 40px 0;
+  padding: 40px 20px;
   position: relative;
 
   @media (max-width: $breakpoint-md) {
