--- a/apps/block_scout_web/assets/css/theme/_edgeware_variables.scss
+++ b/apps/block_scout_web/assets/css/theme/_edgeware_variables.scss
@@ -2,7 +2,7 @@
 $primary: #171717;
 $secondary: #ff3c80;
 $tertiary: #27ac8d;
-$additional-font: #a1ded1;
+$additional-font: #eee;
 
 $tile-body-a-color: $secondary;
 $tile-type-block-color: $secondary;
@@ -26,8 +26,8 @@ $dashboard-stats-item-value-color: #fff; // stat values
 
 $dashboard-stats-item-border-color: $secondary; // stat border
 $dashboard-banner-gradient-start: $primary; // gradient begin
-$dashboard-banner-gradient-end: #193039; // gradient end
-$dashboard-banner-network-plain-container-background-color: #1a323b; // stats bg
+$dashboard-banner-gradient-end: #292929; // gradient end
+$dashboard-banner-network-plain-container-background-color: #242424; // stats bg
 
 // navigation
 $header-icon-border-color-hover: $secondary; // top border on hover
